unpackaged/main/default/objects/Location/fields/Battery_Capable__c.field-meta.xml
<CustomField>
    <fullName>Battery_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Capable</label>
    <type>Checkbox</type>
</CustomField>