unpackaged/main/default/objects/Location/fields/Cross_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Cross_Street_1__c</fullName>
    <label>Cross Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>