unpackaged/main/default/objects/Location/fields/Dolly__c.field-meta.xml
<CustomField>
    <fullName>Dolly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dolly Indicator for wheel lifts to make them eligible for flatbed requested calls</description>
    <label>Dolly</label>
    <type>Checkbox</type>
</CustomField>