unpackaged/main/default/objects/Location/fields/Driver_Id__c.field-meta.xml
<CustomField>
    <fullName>Driver_Id__c</fullName>
    <description>Field for D3 Update callout</description>
    <label>Driver Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>