unpackaged/main/default/objects/Location/fields/Highway__c.field-meta.xml
<CustomField>
    <fullName>Highway__c</fullName>
    <label>Highway #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>