unpackaged/main/default/objects/Location/fields/In_Use__c.field-meta.xml
<CustomField>
    <fullName>In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Use</label>
    <type>Checkbox</type>
</CustomField>