unpackaged/main/default/objects/Location/fields/IsVehicleActive__c.field-meta.xml
<CustomField>
    <fullName>IsVehicleActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsVehicleActive</label>
    <type>Checkbox</type>
</CustomField>