unpackaged/main/default/objects/Location/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <label>License Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>