unpackaged/main/default/objects/Location/fields/Motorcycle_Capable__c.field-meta.xml
<CustomField>
    <fullName>Motorcycle_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motorcycle Capable</label>
    <type>Checkbox</type>
</CustomField>