unpackaged/main/default/objects/Location/fields/RV_Capable__c.field-meta.xml
<CustomField>
    <fullName>RV_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RV Capable</label>
    <type>Checkbox</type>
</CustomField>