unpackaged/main/default/objects/Location/fields/Truck_ID__c.field-meta.xml
<CustomField>
    <fullName>Truck_ID__c</fullName>
    <label>Truck ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>