unpackaged/main/default/objects/Location/fields/Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Name__c</fullName>
    <description>Formula Field for Truck. Service Resource Gantt Label is updated with this value when the Vehicle on that Service Resource is updated</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Name</label>
    <type>Text</type>
</CustomField>