unpackaged/main/default/objects/Location/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Skill Type</label>
    <referenceTo>Vehicle_Type__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>