unpackaged/main/default/objects/Location/recordTypes/ACE_POI.recordType-meta.xml
<RecordType>
    <fullName>ACE_POI</fullName>
    <active>true</active>
    <label>ACE POI</label>
</RecordType>