unpackaged/main/default/objects/Location/recordTypes/Mile_Marker.recordType-meta.xml
<RecordType>
    <fullName>Mile_Marker</fullName>
    <active>true</active>
    <label>Mile Marker</label>
</RecordType>