unpackaged/main/default/objects/Location/recordTypes/other.recordType-meta.xml
<RecordType>
    <fullName>other</fullName>
    <active>false</active>
    <label>other</label>
</RecordType>