unpackaged/main/default/objects/Location/listViews/All_Locations.listView-meta.xml
<ListView>
    <fullName>All_Locations</fullName>
    <columns>Truck_ID__c</columns>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <columns>VisitorAddress</columns>
    <columns>VehicleType__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Facility__c</columns>
    <columns>Facility_Number__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Type__c</field>
        <operation>equals</operation>
        <value>Wheel_Lift</value>
    </filters>
    <label>All Locations</label>
</ListView>