unpackaged/main/default/objects/Location/listViews/All_Locations_Kevan.listView-meta.xml
<ListView>
    <fullName>All_Locations_Kevan</fullName>
    <columns>Driver__c</columns>
    <columns>Driver_Id__c</columns>
    <columns>Truck_ID__c</columns>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <columns>VehicleType__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Facility__c</columns>
    <columns>Facility_Number__c</columns>
    <columns>CreatedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VehicleType__c</field>
        <operation>contains</operation>
        <value>JS</value>
    </filters>
    <label>All Locations-Kevan</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>